--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@babel/core": "7",
-		"@graphql-codegen/cli": "^3.3.0",
+		"@babel/core": "^7.21.4",
+		"@graphql-codegen/cli": "^3.3.1",
 		"@graphql-codegen/introspection": "^3.0.1",
-		"@graphql-codegen/typescript": "^3.0.3",
-		"@graphql-codegen/typescript-document-nodes": "^3.0.3",
-		"@graphql-codegen/typescript-operations": "^3.0.3",
+		"@graphql-codegen/typescript": "^3.0.4",
+		"@graphql-codegen/typescript-document-nodes": "^3.0.4",
+		"@graphql-codegen/typescript-operations": "^3.0.4",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
-		"@types/node": "^18.15.12",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.13",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@types/node": "^18.16.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
+		"@typescript-eslint/parser": "^5.59.1",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.39.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"graphql": "14",
-		"postcss": "^8.4.19",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"svelte-preprocess": "^5.0.0",
-		"tailwindcss": "^3.2.4",
+		"graphql": "^14.7.0",
+		"postcss": "^8.4.23",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.0",
+		"svelte": "^3.58.0",
+		"svelte-check": "^2.10.3",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.3.1",
 		"ts-node": "^10.9.1",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0"
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"vite": "^4.3.1"
 	},
 	"type": "module",
 	"peerDependencies": {
