--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"@graphql-codegen/typescript-document-nodes": "^3.0.4",
 		"@graphql-codegen/typescript-operations": "^3.0.4",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+		"@sveltejs/adapter-vercel": "^2.4.2",
+		"@sveltejs/kit": "^1.5",
 		"@types/node": "^18.16.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
