Big update: Include collaborateurices

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@graphql-codegen/typescript": "^3.0.4",
 		"@graphql-codegen/typescript-document-nodes": "^3.0.4",
 		"@graphql-codegen/typescript-operations": "^3.0.4",
+		"@prgm/sveltekit-progress-bar": "^1.0.0",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-vercel": "^2.4.2",
 		"@sveltejs/kit": "^1.5",
