--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 	},
 	"dependencies": {
 		"fractils": "^3.1.1",
-		"sveltekit-embed": "^0.0.12"
+		"sveltekit-embed": "^0.0.12",
+		"tailwind-hamburgers": "^1.3.5"
 	}
 }
